--- a/index.css
+++ b/index.css
@@ -9,6 +9,10 @@ body {
   background-color: var(--background-color);
   color: var(--main-font);
 }
+@font-face {
+  font-family: quicksand;
+  src: url(font/Quicksand-VariableFont_wght.ttf);
+}
 
 main {
   width: 100%;
@@ -43,10 +47,34 @@ main {
     font-family: quicksand;
   }
 
+  .icon-container {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 50px;
+    box-sizing: border-box;
+  }
+
+  .icon1,
+  .icon2 {
+    width: 50px;
+  }
+
   .favorits {
-    background-color: #f3daef;
     padding-top: 50px;
     padding-bottom: 50px;
+    display: grid;
+    grid-template-columns: subgrid;
+    gap: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+  }
+  .container {
+    display: grid;
+    gap: 20px;
+    background-color: #f3daef;
+
+    grid-template-columns: 1fr;
   }
   .card {
     background: white;
@@ -71,20 +99,39 @@ main {
     font-size: 14px;
   }
   .price {
+    text-align: end;
+    padding-right: 30px;
+    font-size: 20px;
+    margin-top: -23px;
     font-weight: bold;
-    font-size: 16px;
-    margin: 10px 0;
   }
   .button {
-    background: #d67256;
-    color: white;
-    padding: 8px 15px;
-    border-radius: 20px;
+    font-size: 13px;
+    padding: 12px;
+    width: 80px;
+    border-radius: 50px;
+    background-color: var(--orange-color);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: -10px;
+    font-size: 15px;
+    transition: background-color 0.3s ease;
+    font-family: "moret", serif;
     text-decoration: none;
-    font-size: 14px;
-    display: inline-block;
-    margin-top: 10px;
   }
+
+  .button:hover {
+    background-color: var(--red-orange-color);
+  }
+
+  .button a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
   .orange-stripe {
     background-color: #e28b49;
     padding-top: 3px;
@@ -92,6 +139,9 @@ main {
   }
 
   .orangepath {
+    display: none;
+  }
+  .greenpath {
     display: none;
   }
 
@@ -102,6 +152,11 @@ main {
 
   p {
     color: white;
+    font-family: Quicksand;
+    margin-left: 20px;
+    margin-right: 20px;
+    line-height: 1.9;
+    word-spacing: 5px;
   }
   .photo-with-orange {
     max-width: 100%;
@@ -118,18 +173,26 @@ main {
     overflow: hidden;
     width: 100%;
   }
-
+  /* 
   .forsidebillede {
     width: 100%;
     max-width: 100%;
     display: block;
     margin: 0 auto;
     transform: rotate(-90deg);
+  } */
+
+  .icon-container {
+    display: flex;
+    justify-content: space-between;
+
+    padding: 50px;
+    box-sizing: border-box;
   }
 
-  .icon1 {
-    top: 100px;
-    left: 100px;
+  .icon1,
+  .icon2 {
+    width: 50px;
   }
 
   h1 {
@@ -138,6 +201,8 @@ main {
     font-weight: 400;
     font-style: normal;
     text-align: center;
+    margin-bottom: 15px;
+    margin-top: 15px;
   }
   h2 {
     color: white;
@@ -153,12 +218,18 @@ main {
   }
 
   .favorits {
-    background-color: #f3daef;
     padding-top: 50px;
     padding-bottom: 50px;
-    margin-bottom: 70px;
+    display: grid;
+    grid-template-columns: subgrid;
+    gap: 20px;
   }
-
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 300px));
+    gap: 30px;
+    background-color: #f3daef;
+  }
   .card {
     background: white;
     width: 250px;
@@ -166,7 +237,7 @@ main {
     padding: 20px;
     text-align: center;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    border: 2px solid #d67256;
+    border: 3px solid var(--red-orange-color);
   }
   .card img {
     width: 100px;
@@ -182,20 +253,38 @@ main {
     font-size: 14px;
   }
   .price {
+    text-align: end;
+    padding-right: 30px;
+    font-size: 20px;
+    margin-top: -23px;
     font-weight: bold;
-    font-size: 16px;
-    margin: 10px 0;
   }
   .button {
-    background: #d67256;
-    color: white;
-    padding: 8px 15px;
-    border-radius: 20px;
-    text-decoration: none;
-    font-size: 14px;
-    display: inline-block;
-    margin-top: 10px;
+    font-size: 13px;
+    padding: 12px;
+    width: 80px;
+    border-radius: 50px;
+    background-color: var(--orange-color);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: -10px;
+    font-size: 15px;
+    transition: background-color 0.3s ease;
+    font-family: "moret", serif;
   }
+
+  .button:hover {
+    background-color: var(--red-orange-color);
+  }
+
+  .button a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+  }
+
   .orange-stripe {
     display: none;
   }
@@ -234,6 +323,11 @@ main {
 
   p {
     color: white;
+    font-family: Quicksand;
+    margin-left: 20px;
+    margin-right: 20px;
+    line-height: 2.9;
+    word-spacing: 7px;
   }
   .photo-with-orange {
     max-width: 100%;
