--- a/css/productlist.css
+++ b/css/productlist.css
@@ -166,16 +166,22 @@ p {
 /* Discount */
 
 .product_container:has(.discount-price) .price {
+  margin-top: 10px;
   text-decoration: line-through;
   color: #8f685ca4;
 }
 
 .product_container:has(.discount-price) .price::before {
-  content: "Før ";
+  content: "Before ";
 }
 
 .discount-price {
+  text-align: end;
+  padding-right: 30px;
+  font-size: 20px;
+  margin-top: -5px;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .image-container {
@@ -193,26 +199,10 @@ p {
   background-color: var(--red-orange-color);
   color: white;
   font-size: 14px;
-  font-weight: bold;
-  padding: 1px;
-  border-radius: 5px;
-}
-
-
-.discount-single {
-  position: absolute;
-  visibility: hidden;
-  top: -25px;
-  left: 25px;
-  background-color: red;
-  color: white;
-  font-size: 25px;
-  font-weight: bold;
   padding: 5px 10px;
   border-radius: 5px;
+  font-family: quicksand;
 }
-
-
 
 .IsOnSale {
   visibility: visible;
