--- a/css/singleproduct.css
+++ b/css/singleproduct.css
@@ -86,6 +86,7 @@ h3 {
   .description_info {
     grid-row: 3;
     grid-column: 1 / -1;
+    max-width: 600px;
   }
   .divider {
     visibility: hidden;
