--- a/css/productlist.css
+++ b/css/productlist.css
@@ -1,6 +1,10 @@
+
 @font-face {
-  font-family: quicksand;
-  src: url(font/Quicksand-VariableFont_wght.ttf);
+  font-family: "quicksand";
+  src: url("../assets/font/Quicksand-Regular.woff2") format("woff2"),
+       url("../assets/font/Quicksand-Regular.woff") format("woff"),
+       url("../assets/font/Quicksand-Regular.ttf") format("truetype");  
+  font-style: normal;
 }
 
 body {
