--- a/css/index.css
+++ b/css/index.css
@@ -9,11 +9,11 @@ body {
   background-color: var(--background-color);
   color: var(--main-font);
 }
+
 @font-face {
   font-family: quicksand;
-  src: url(font/Quicksand-VariableFont_wght.ttf);
+  src: url(../assets/font/Quicksand-VariableFont_wght.ttf);
 }
-
 main {
   width: 100%;
   max-width: 100%;
@@ -21,10 +21,10 @@ main {
 }
 
 @media (max-width: 768px) {
-  .forsidebillede {
+  /* .forsidebillede {
     max-width: 81%;
     transform: rotate(-90deg);
-  }
+  } */
 
   h1 {
     color: #f06a41;
@@ -50,7 +50,6 @@ main {
   .icon-container {
     display: flex;
     justify-content: space-between;
-
     padding: 50px;
     box-sizing: border-box;
   }
@@ -58,78 +57,6 @@ main {
   .icon1,
   .icon2 {
     width: 50px;
-  }
-
-  .favorits {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    display: grid;
-    grid-template-columns: subgrid;
-    gap: 20px;
-    margin-left: 50px;
-    margin-right: 50px;
-  }
-  .container {
-    display: grid;
-    gap: 20px;
-    background-color: #f3daef;
-
-    grid-template-columns: 1fr;
-  }
-  .card {
-    background: white;
-    width: 250px;
-    border-radius: 10px;
-    padding: 20px;
-    text-align: center;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    border: 2px solid #d67256;
-  }
-  .card img {
-    width: 100px;
-    display: block;
-    margin: 0 auto;
-  }
-  .card h2 {
-    font-size: 18px;
-    margin: 10px 0 5px;
-  }
-  .card p {
-    color: gray;
-    font-size: 14px;
-  }
-  .price {
-    text-align: end;
-    padding-right: 30px;
-    font-size: 20px;
-    margin-top: -23px;
-    font-weight: bold;
-  }
-  .button {
-    font-size: 13px;
-    padding: 12px;
-    width: 80px;
-    border-radius: 50px;
-    background-color: var(--orange-color);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    margin-top: -10px;
-    font-size: 15px;
-    transition: background-color 0.3s ease;
-    font-family: "moret", serif;
-    text-decoration: none;
-  }
-
-  .button:hover {
-    background-color: var(--red-orange-color);
-  }
-
-  .button a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
   }
 
   .orange-stripe {
@@ -150,9 +77,9 @@ main {
     aspect-ratio: 1/1;
   }
 
-  p {
+  .main-text {
     color: white;
-    font-family: Quicksand;
+    font-family: quicksand;
     margin-left: 20px;
     margin-right: 20px;
     line-height: 1.9;
@@ -169,12 +96,7 @@ main {
 }
 
 @media (min-width: 768px) {
-  .image-container {
-    overflow: hidden;
-    width: 100%;
-  }
-  /* 
-  .forsidebillede {
+  /* .forsidebillede {
     width: 100%;
     max-width: 100%;
     display: block;
@@ -192,7 +114,7 @@ main {
 
   .icon1,
   .icon2 {
-    width: 50px;
+    width: 100px;
   }
 
   h1 {
@@ -203,6 +125,7 @@ main {
     text-align: center;
     margin-bottom: 15px;
     margin-top: 15px;
+    font-size: 40px;
   }
   h2 {
     color: white;
@@ -215,74 +138,6 @@ main {
   h3 {
     color: white;
     font-family: quicksand;
-  }
-
-  .favorits {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    display: grid;
-    grid-template-columns: subgrid;
-    gap: 20px;
-  }
-  .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 300px));
-    gap: 30px;
-    background-color: #f3daef;
-  }
-  .card {
-    background: white;
-    width: 250px;
-    border-radius: 10px;
-    padding: 20px;
-    text-align: center;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-    border: 3px solid var(--red-orange-color);
-  }
-  .card img {
-    width: 100px;
-    display: block;
-    margin: 0 auto;
-  }
-  .card h2 {
-    font-size: 18px;
-    margin: 10px 0 5px;
-  }
-  .card p {
-    color: gray;
-    font-size: 14px;
-  }
-  .price {
-    text-align: end;
-    padding-right: 30px;
-    font-size: 20px;
-    margin-top: -23px;
-    font-weight: bold;
-  }
-  .button {
-    font-size: 13px;
-    padding: 12px;
-    width: 80px;
-    border-radius: 50px;
-    background-color: var(--orange-color);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    margin-top: -10px;
-    font-size: 15px;
-    transition: background-color 0.3s ease;
-    font-family: "moret", serif;
-  }
-
-  .button:hover {
-    background-color: var(--red-orange-color);
-  }
-
-  .button a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
   }
 
   .orange-stripe {
@@ -321,9 +176,9 @@ main {
     margin-top: 80px;
   }
 
-  p {
+  .main-text {
     color: white;
-    font-family: Quicksand;
+    font-family: quicksand;
     margin-left: 20px;
     margin-right: 20px;
     line-height: 2.9;
@@ -335,4 +190,148 @@ main {
   .green-stripe {
     display: none;
   }
+}
+
+/* CELINA CSS */
+
+#productlist {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.product-category {
+  text-align: center;
+}
+
+.product_list_container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 300px));
+  gap: 30px;
+  justify-content: center;
+  background-color: var(--purple);
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.product_container {
+  border-radius: 15px;
+  display: grid;
+  grid-template-rows: subgrid;
+  grid-row: span 3;
+  gap: 0;
+  border: 3px solid var(--red-orange-color);
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: white;
+}
+
+.product_container img {
+  width: 100%;
+  margin: 0;
+}
+
+.price {
+  text-align: end;
+  padding-right: 30px;
+  font-size: 20px;
+  margin-top: -15px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: var(--main-font);
+}
+
+.productdisplayname {
+  margin-top: -5px;
+  padding-left: 10px;
+  color: var(--main-font);
+}
+
+.brandname {
+  margin-top: -15px;
+  font-size: 15px;
+  padding-left: 10px;
+  color: var(--main-font);
+}
+
+.product_link {
+  text-decoration: none;
+  color: var(--main-font);
+}
+
+.product_container:hover {
+  transform: scale(1.02);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.product_container:hover .productdisplayname,
+.product_container:hover .brandname,
+.product_container:hover .price {
+  color: var(--orange-color);
+}
+
+/* SOLD OUT */
+.sold-out {
+  visibility: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.73);
+  color: white;
+  font-size: 22px;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 5px;
+  z-index: 10;
+  white-space: nowrap;
+}
+
+.IsSoldOut {
+  visibility: visible;
+}
+
+/* Discount */
+
+.product_container:has(.discount-price) .price {
+  margin-top: 10px;
+  text-decoration: line-through;
+  color: #8f685ca4;
+}
+
+.product_container:has(.discount-price) .price::before {
+  content: "Before ";
+}
+
+.discount-price {
+  text-align: end;
+  padding-right: 30px;
+  font-size: 20px;
+  margin-top: -5px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: var(--main-font);
+}
+
+.image-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.discount {
+  position: absolute;
+  visibility: hidden;
+  top: 5%;
+  left: 5%;
+  background-color: var(--red-orange-color);
+  color: white;
+  font-size: 14px;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-family: quicksand;
+}
+
+.IsOnSale {
+  visibility: visible;
 }
