--- a/css/singleproduct.css
+++ b/css/singleproduct.css
@@ -1,6 +1,9 @@
 @font-face {
-  font-family: "Quicksand";
-  src: url(../assets/font/Quicksand-VariableFont_wght.ttf) format("truetype");
+  font-family: "quicksand";
+  src: url("../assets/font/Quicksand-Regular.woff2") format("woff2"),
+    url("../assets/font/Quicksand-Regular.woff") format("woff"),
+    url("../assets/font/Quicksand-Regular.ttf") format("truetype");
+  font-style: normal;
 }
 
 body {
