--- a/css/productlist.css
+++ b/css/productlist.css
@@ -141,13 +141,22 @@ p {
 }
 }
 
+.filter-container {
+  display: flex;
+  justify-content: flex-end;
+}
 
-
-
-
-
-
-
+.filter {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end; 
+  margin-right: 160px;
+  padding: 3px;
+  color: var(--main-font);
+  background-color: #e28b495b;
+  border-radius: 5px;
+  border: 1px solid var(--red-orange-color);
+}
 
 /* SOLD OUT */
 .sold-out {
