--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,7 @@ body {
     url("../assets/font/Quicksand-Regular.woff") format("woff"),
     url("../assets/font/Quicksand-Regular.ttf") format("truetype");
   font-style: normal;
+  font-weight: 800;
 }
 main {
   width: 100%;
@@ -57,12 +58,13 @@ main {
     background-color: #fceae1;
   }
 
-  /* .header-text {
+  .header-text {
     position: relative;
-    bottom: -40px;
+    top: 35px;
     left: 20px;
     color: white;
-  } */
+    margin-right: 50px;
+  }
 
   h5 {
     color: white;
@@ -71,14 +73,16 @@ main {
     font-style: normal;
     font-size: 2rem;
     line-height: 0;
+    margin-right: 50px;
+    white-space: nowrap;
   }
   h6 {
     color: white;
-    font-family: "moret",  serif;
-    font-weight: 100;
-    font-style: normal;
+    font-family: quicksand;
     font-size: 1.5rem;
     line-height: 0;
+    margin-right: 50px;
+    white-space: nowrap;
   }
 
   .icon1,
@@ -168,20 +172,31 @@ main {
     font-style: normal;
     font-size: 3.1rem;
     line-height: 0;
+    margin-right: 300px;
+    white-space: nowrap;
   }
   h6 {
     color: white;
-    font-family: "moret",  serif;
-    font-weight: 100;
+    font-family: quicksand;
     font-style: normal;
     font-size: 2.1rem;
     line-height: 0;
+    margin-right: 300px;
+    white-space: nowrap;
   }
 
   .icon1,
   .icon2 {
     width: 70px;
     height: 70px;
+  }
+
+  .header-text {
+    position: relative;
+    top: 170px;
+    left: 70px;
+    color: white;
+    margin-right: 300px;
   }
 
   h1 {
