--- a/css/singleproduct.css
+++ b/css/singleproduct.css
@@ -86,6 +86,21 @@ h3 {
   height: 25px;
   padding-right: 5px;
 }
+.product_container:has(.discount-price) .price {
+  margin-top: 10px;
+  text-decoration: line-through;
+  color: #8f685ca4;
+}
+.discount-price {
+  margin-top: -10px;
+}
+
+.product_container:has(.discount-price) .price::before {
+  content: "Before ";
+}
+.IsOnSale {
+  visibility: visible;
+}
 @media (width > 768px) {
   .grid_pic_text {
     display: grid;
