retter grid til

--- a/css/singleproduct.css
+++ b/css/singleproduct.css
@@ -164,9 +164,11 @@ h3 {
   .right-icon img {
     width: 250px;
   }
-  .review_container {
-    display: flex;
-    gap: 10px;
+  .review {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
   }
   .main {
     border: #8f685c solid 2px;
