--- a/css/singleproduct.css
+++ b/css/singleproduct.css
@@ -23,6 +23,7 @@ body {
 
   background-color: var(--background-color);
   color: var(--main-font);
+  overflow-x: hidden;
 }
 .main {
   margin-bottom: 20px;
