--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,8 @@ body {
 
   background-color: var(--background-color);
   color: var(--main-font);
+  margin: 0;
+  padding: 0;
 }
 
 @font-face {
@@ -17,6 +19,7 @@ body {
     url("../assets/font/Quicksand-Regular.ttf") format("truetype");
   font-style: normal;
   font-weight: 800;
+  font-display: swap;
 }
 main {
   width: 100%;
@@ -28,6 +31,8 @@ p {
   font-family: quicksand;
   font-weight: 800;
 }
+
+/******** MOBILE SITE *********/
 
 @media (max-width: 768px) {
   h1 {
@@ -51,22 +56,6 @@ p {
     font-family: quicksand;
   }
 
-  .icon-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 18px;
-    box-sizing: border-box;
-    background-color: #fceae1;
-  }
-
-  .header-text {
-    position: relative;
-    top: 15px;
-    left: 20px;
-    color: white;
-    margin-right: 50px;
-  }
-
   h5 {
     color: white;
     font-family: "moret",  serif;
@@ -84,6 +73,22 @@ p {
     line-height: 0;
     margin-right: 50px;
     white-space: nowrap;
+  }
+
+  .icon-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 18px;
+    box-sizing: border-box;
+    background-color: #fceae1;
+  }
+
+  .header-text {
+    position: relative;
+    top: 15px;
+    left: 20px;
+    color: white;
+    margin-right: 50px;
   }
 
   .icon1,
@@ -177,6 +182,7 @@ p {
     display: none; /* Skjul scrollbar på mobil */
   }
 }
+/******** COMPUTER SITE *********/
 
 @media (min-width: 768px) {
   .icon-container {
@@ -189,6 +195,28 @@ p {
     background-color: #fceae1;
   }
 
+  h1 {
+    color: #f06a41;
+    font-family: "moret",  serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+    margin-bottom: 15px;
+    margin-top: 15px;
+    font-size: 40px;
+  }
+  h2 {
+    color: white;
+    text-align: center;
+    font-family: "moret",  serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  h3 {
+    color: white;
+    font-family: quicksand;
+  }
   h5 {
     color: white;
     font-family: "moret",  serif;
@@ -221,29 +249,6 @@ p {
     left: 70px;
     color: white;
     margin-right: 300px;
-  }
-
-  h1 {
-    color: #f06a41;
-    font-family: "moret",  serif;
-    font-weight: 400;
-    font-style: normal;
-    text-align: center;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    font-size: 40px;
-  }
-  h2 {
-    color: white;
-    text-align: center;
-    font-family: "moret",  serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  h3 {
-    color: white;
-    font-family: quicksand;
   }
 
   .orange-stripe {
@@ -299,7 +304,7 @@ p {
   }
 }
 
-/* CELINA CSS */
+/**** CSS from productlist.css ****/
 
 #productlist {
   margin-left: 50px;
