--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,17 @@ body {
   src: url("../assets/font/Quicksand-Regular.woff2") format("woff2"),
     url("../assets/font/Quicksand-Regular.woff") format("woff"),
     url("../assets/font/Quicksand-Regular.ttf") format("truetype");
-  font-style: normal;
   font-weight: 800;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "moret";
+  src: url("../assets/font/Moret-Regular.woff2") format("woff2"),
+    url("../assets/font/Moret-Regular.woff") format("woff"),
+    url("../assets/font/Moret-Regular.otf") format("truetype");
+}
+
 main {
   width: 100%;
   max-width: 100%;
